CS-943 fix image scaling on featured posts list.

--- a/src/styles/components/blog/_featured-post.scss
+++ b/src/styles/components/blog/_featured-post.scss
@@ -2,16 +2,11 @@
   cursor: pointer;
 
   &__img-container {
-    align-items: center;
-    display: flex;
-    height: 225px;
-    justify-content: center;
+    @include aspect-box(1);
     margin-bottom: 12px;
-    overflow: hidden;
 
     &__img {
-      height: 100%;
-      width: auto;
+      object-fit: cover;
     }
   }
 
