--- a/src/styles/abstracts/_helpers.scss
+++ b/src/styles/abstracts/_helpers.scss
@@ -17,3 +17,19 @@
   max-width: $containers-max-width;
   margin: 0 auto;
 }
+
+
+@mixin aspect-box($ratio: number) {
+  height: 0;
+  overflow: hidden;
+  padding-top: 1/$ratio * 100%;
+  position: relative;
+
+  & > * {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+}
