--- a/src/styles/layout/_search-nav.scss
+++ b/src/styles/layout/_search-nav.scss
@@ -7,7 +7,7 @@
   // caused by margin within this container, which is white
   @media (max-width: 60em) {
     margin-top: 52px;
-    & .body-container { margin-top: 0; }
+    & .body-container, & .container-invert { margin-top: 0; }
   }
 
   h2 {
