CS-940 make bg color #F7F9FD across entire site.

--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -94,4 +94,4 @@
 // an incongruous white region below the header
 // making #app white prevents this from being visible otherwise
 body { background: $primary-color; }
-#app { background: #fff; }
+#app { background: #F7F9FD; }
