Change main background image

--- a/src/styles/components/home/_hero.scss
+++ b/src/styles/components/home/_hero.scss
@@ -1,5 +1,5 @@
 .hero {
-  background: url("/static-data/images/hero.png");
+  background: url("/static-data/images/bg.png");
   background-size: cover;
   background-position: 50% 25%;
   padding: 85px 0;
